--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,18 @@
             <button id="start_video">
                 <img src="./images/rec-button.png" alt="Start Recording"> 
             </button>
+            <button id="stop_video">
+                <img src="./images/stop-button.png" alt="Stop Recording">
+            </button>
+            <button id="replay_video">
+                <img src="./images/replay.png" alt="Replay Recording">
+            </button>
         </div>
     </div>
-    <script src="./js/popup.js"></script>
-
+    <script src="popup.js"></script>
 </body>
 </html>
+
+
 
 
